# verona

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .llvm-ci.yml  .vsts-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
experiments/process_sandbox/: CMakeLists.txt  README.md  child_malloc.h  example.cc  filetree.h  helpers.h  host_service_calls.h  lib.cc  library_runner.cc  libsandbox.cc  nosandbox.cc  privilege_elevation_upcalls.h  sandbox.hh  sandbox_fd_numbers.h  shared.h
experiments/process_sandbox/cxxapi/: cxxsandbox.h
experiments/process_sandbox/docs/: building.md  code_layout.md  walkthrough.md
experiments/process_sandbox/platform/: README.md  child_process_pdfork.h  onebitsem.h  poller_epoll.h  sandbox.h  sandbox_capsicum.h  sandbox_seccomp-bpf.h  shm_posix.h  syscall_context.h
experiments/process_sandbox/src/: child_malloc.h  host_service_calls.h  library_runner.cc  libsandbox.cc
experiments/process_sandbox/tests/: CMakeLists.txt  README.md  child_process.cc  net-test-helpers.h  onebitsem-basic.cc  onebitsem-child.cc  path.cc  poller.cc  sandbox-basic.cc  sandbox-callback-basic.cc  sandbox-callback-recursive.cc  sandbox-crash.cc  sandbox-curl.cc  sandbox-fake-open.cc  sandbox-modify-pagemap.cc  sandbox-network.cc  sandbox-rpc-bounds.cc  sandbox-rpc-deadlock.cc  sandbox-upcall-basic.cc  sandbox-zlib.cc  shm.cc  (+15 more)
src/: CMakeLists.txt  btype.h  lang.cc  lang.h  lookup.cc  lookup.h  main.cc  parse.cc  readme.md  subtype.cc  subtype.h  wf.h
src/ast/: CMakeLists.txt  ast.cc  ast.h  cli.cc  cli.h  dfs.h  err.cc  err.h  files.cc  files.h  grammar.peg  lit.cc  lit.h  main.cc  module.cc  module.h  parser.cc  parser.h  pass.h  path.cc  path.h  prec.cc  prec.h  ref.cc  ref.h  sugar.cc  sugar.h  sym.cc  sym.h
src/compiler/: CMakeLists.txt  analysis.cc  analysis.h  assignssymbols.h  ast.cc  ast.h  coercion.h  context.cc  context.h  elaboration.cc  elaboration.h  fixpoint.cc  fixpoint.h  format.h  freevars.h  fs.h  instantiation.h  intern.cc  intern.h  local_id.h  main.cc  mapper.cc  mapper.h  parser.cc  parser.h  pegmatite-extra.h  polarize.cc  polarize.h  printing.cc  printing.h  recursive_visitor.h  region.h  resolution.cc  resolution.h  source_manager.h  substitution.h  traits.h  type.cc  type.h  type_visitor.h  (+2 more)
src/deprecated/: CMakeLists.txt
src/ds/: config.h  console.h  error.h  fs.h  helpers.h  taggedptr.h
src/ffi/: CMakeLists.txt  CXXInterface.h  CXXType.h  Compiler.h  Doxyfile  FS.h  Timer.h  compiler.cc  compiler.h  main.cc  test.h  verona-ffi.cc
src/interop/: CMakeLists.txt  CXXBuilder.h  CXXInterface.h  CXXQuery.h  CXXType.h  Compiler.h  FS.h  Timer.h  verona-interop.cc
src/interpreter/: CMakeLists.txt  bytecode.cc  bytecode.h  code.h  convert.h  format.h  interpreter.cc  interpreter.h  main.cc  object.cc  object.h  options.h  value.cc  value.h  vm.cc  vm.h
src/langkit/: CMakeLists.txt  ast.h  driver.h  lookup.h  parse.h  pass.h  rewrite.h  source.h  token.h  wf.h
src/mlir/: CMakeLists.txt  Query.h  abi.h  ast-utils.cc  ast-utils.h  consumer.cc  consumer.h  design.md  driver.cc  driver.h  error.cc  error.h  free-vars.h  generator.cc  generator.h  llvm.md  lowering.md  orcjit.h  passes.cc  passes.h  passes.md  symbol.h  utils.cc  utils.h  verona-mlir.cc
src/parser/: CMakeLists.txt  anf.cc  anf.h  ast.cc  ast.h  dispatch.h  dnf.cc  dnf.h  driver.cc  driver.h  escaping.cc  escaping.h  fields.h  grammar.peg  ident.h  infer.cc  infer.h  lexer.cc  lexer.h  lookup.cc  lookup.h  main.cc  parser-notes.md  parser.cc  parser.h  pass.cc  pass.h  path.cc  path.h  pretty.cc  pretty.h  print.cc  print.h  resolve.cc  resolve.h  rewrite.cc  rewrite.h  source.cc  source.h  subtype.cc  (+1 more)
src/passes/: anf.cc  application.cc  assignlhs.cc  assignment.cc  autocreate.cc  autofields.cc  autorhs.cc  codereuse.cc  conditionals.cc  defaultargs.cc  defbeforeuse.cc  drop.cc  lambda.cc  localvar.cc  memberconflict.cc  modules.cc  namearity.cc  nlrcheck.cc  partialapp.cc  reference.cc  resetimplicit.cc  reverseapp.cc  structure.cc  traitisect.cc  typealg.cc  typeflat.cc  typefunc.cc  typeinfer.cc  typenames.cc  typereference.cc  typevalid.cc  typeview.cc  validtypeargs.cc
src/path/: CMakeLists.txt  path.cc  path.h
src/rt/: CMakeCache.txt  CMakeLists.txt  README.md  verona.h
src/std/: test.verona
src/stdlib/: CMakeLists.txt  builtin.verona
src/typed-ast/: CMakeLists.txt  ast.h  conversion.cc  conversion.h  expr.h  main.cc  node.h  print.cc  print.h
testsuite/: CMakeLists.txt  README.md  ast-parse.cmake  common.cmake  compare.cmake  compile-fail.cmake  compile-pass.cmake  ffi-pass.cmake  interop-pass.cmake  mlir-fail.cmake  mlir-parse.cmake  parser.cmake  run-pass.cmake  run-test.py  run_command.cmake  run_test.py  test.foo  update-dump.cmake  verona-interop.cmake  verona-mlir.cmake  verona-parser.cmake  verona.cmake  verona_nostdlib.cmake  veronac.cmake
testsuite/golden/: test.foo.out.1  test.foo.out.2
testsuite/mlir/: CMakeLists.txt
testsuite/mlir-parse/: class.verona  variables.verona  while-if.verona  while.verona
testsuite/verona-interop/: foo-char.cfg  foo-double.cfg  foo-long-long.cfg  foo-method-int.cfg  notemp-fields.cfg  test.h
testsuite/verona-mlir/: arithmetic-llvm.cfg  arithmetic.cfg  arithmetic.verona  call-llvm.cfg  call.cfg  call.verona  constant.verona  declaration-order-llvm.cfg  declaration-order.cfg  declaration-order.verona  empty-class-llvm.cfg  empty-class.cfg  empty-class.verona  example-llvm.cfg  example.cfg  example.mlir  function-llvm.cfg  function.cfg  function.verona  main-jit.cfg  main-llvm.cfg  main.cfg  main.verona  string-llvm.cfg  string.cfg  string.verona  struct-llvm.cfg  struct.cfg  struct.verona  subsumption.mlir  tuple-llvm.cfg  tuple.cfg  tuple.verona  using-llvm.cfg  using.cfg  using.verona
testsuite/verona-mlir-old/: conditional.verona  nested-conditional.verona  nested-while.verona
testsuite/verona-parser/: alloc.verona  dnf.verona  for-sugar.verona  function.verona  hygienic-id.verona  import.verona  literal.verona  loop.verona  staticcall.verona  strings.verona  typedef.verona  when.verona
(+928 files in other folders)
